--- a/public/stylesheets/index.styl
+++ b/public/stylesheets/index.styl
@@ -16,14 +16,12 @@
 
 @import 'entypo.css'
 @import 'watchers.css'
-@import 'modal.css'
 @import 'about.css'
 
 @import 'layout'
+// @import 'modal'
 @import 'footer'
 @import 'item'
-
-// @import 'landing'
 
 
 // @import 'button'
