--- a/public/stylesheets/item.styl
+++ b/public/stylesheets/item.styl
@@ -1,5 +1,8 @@
 .product-listing
   border-bottom 1px solid #ccc
+  _pad = 10px
+  padding-top _pad
+  padding-bottom _pad
 
   .title
     font-size $font-size-large
@@ -24,3 +27,13 @@
 
   .price
     padding 10px 0
+
+.add-basket-box
+  padding 10px
+  border 1px solid #ddd
+
+// img.product-image
+
+.content img
+  max-width 100%
+  margin-bottom 20px
