--- a/public/stylesheets/bootstrap/buttons.styl
+++ b/public/stylesheets/bootstrap/buttons.styl
@@ -54,28 +54,31 @@
 // Alternate buttons
 // --------------------------------------------------
 
-.btn-default {
+.btn-primary
+  button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
+
+.btn-default
   button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
-}
-.btn-categories {
+
+.btn-categories
   button-variant($btn-categories-color, $btn-categories-bg, $btn-categories-border);
-}
+
 // Warning appears as orange
-.btn-warning {
+.btn-warning
   button-variant($btn-warning-color, $btn-warning-bg, $btn-warning-border);
-}
+
 // Danger and error appear as red
-.btn-danger {
+.btn-danger
   button-variant($btn-danger-color, $btn-danger-bg, $btn-danger-border);
-}
+
 // Success appears as green
-.btn-success {
+.btn-success
   button-variant($btn-success-color, $btn-success-bg, $btn-success-border);
-}
+
 // Info appears as blue-green
-.btn-info {
+.btn-info
   button-variant($btn-info-color, $btn-info-bg, $btn-info-border);
-}
+
 
 
 // Link buttons
