--- a/public/stylesheets/footer.styl
+++ b/public/stylesheets/footer.styl
@@ -1,2 +1,10 @@
-body > footer
-  background green
+.wrapper > footer
+  ul
+    float left
+    list-style none
+    margin 0 0 20px
+    li
+      float left
+      margin-right 40px
+  .footer-right
+    text-align right
