First commit to new remote

--- a/public/stylesheets/item.styl
+++ b/public/stylesheets/item.styl
@@ -11,19 +11,20 @@
 
   .image
     max-width 100%
-    height 320px
 
-    background-size cover
-    background-position 50%
+    // height 320px
 
-    @media $media-screen-min-phone
-      height 550px
+    // background-size cover
+    // background-position 50%
 
-    @media $media-screen-min-tablet
-      height 260px
+    // @media $media-screen-min-phone
+    //   height 550px
 
-    @media $media-screen-min-desktop
-      height 200px
+    // @media $media-screen-min-tablet
+    //   height 260px
+
+    // @media $media-screen-min-desktop
+    //   height 200px
 
   .price
     padding 10px 0
@@ -31,8 +32,6 @@
 .add-basket-box
   padding 10px
   border 1px solid #ddd
-
-// img.product-image
 
 .content img
   max-width 100%
