--- a/public/stylesheets/item.styl
+++ b/public/stylesheets/item.styl
@@ -11,20 +11,19 @@
 
   .image
     max-width 100%
+    height 320px
 
-    // height 320px
+    background-size cover
+    background-position 50%
 
-    // background-size cover
-    // background-position 50%
+    @media $media-screen-min-phone
+      height 550px
 
-    // @media $media-screen-min-phone
-    //   height 550px
+    @media $media-screen-min-tablet
+      height 260px
 
-    // @media $media-screen-min-tablet
-    //   height 260px
-
-    // @media $media-screen-min-desktop
-    //   height 200px
+    @media $media-screen-min-desktop
+      height 200px
 
   .price
     padding 10px 0
