--- a/public/stylesheets/layout.styl
+++ b/public/stylesheets/layout.styl
@@ -32,7 +32,6 @@ body > .wrapper
     right 0
   ul
     display block
-    overflow-y scroll
     padding 10px
     li
       font-family $headings-font-family
@@ -89,20 +88,28 @@ menu.topmenu
   border-bottom _border
   background $body-bg
   z-index $zindex-navbar
+
   label
+    z-index 10
+    &:hover
+      ~ i
+        color $navbar-default-brand-hover-color
+
+  label
+  i
+    absolute top
     height $navbar-height
     width $navbar-height
-    padding _navbar_pad
     margin 0
-    text-align center
     cursor pointer
+    padding _navbar_pad
     color $navbar-default-brand-color
-    i
-      font-size $navbar-height - (_navbar_pad * 2)
-    &:hover
-      color $navbar-default-brand-hover-color
-    &:nth-child(2)
-      float right
+    font-size $navbar-height - (_navbar_pad * 2)
+    &.left
+      left 0
+    &.right
+      right 0
+
 
 section.navs
   fixed top
@@ -139,11 +146,12 @@ main
 
   section.navs
     height 100%
-    background #eee
+    background _bg = #eee
     z-index $zindex-sidenav-bg
 
     .sidenav
       width _shift_amount
+      background _bg
       opacity 0
 
 @media $media-screen-min-tablet
@@ -153,7 +161,7 @@ main
   .brand .company
     background-position _navbar_pad
 
-  menu.topmenu label
+  menu.topmenu *
     display none
 
   main .content
