re-add the modal stuff

--- a/public/partials/prelaunch-dialog-logged-out.html
+++ b/public/partials/prelaunch-dialog-logged-out.html
@@ -1,2 +1,10 @@
 <p>We are still getting ready.</p>
-<p data-ng-hide="root.account"><a href="/auth/login" target="_self">Sign up</a> to get ready for launch :)</p>
+<div>
+  <ol class="steps">
+      <li><span class="step">Starting a sale opens a 72 hour window</span></li>
+      <li><span class="step">Each purchase within that window lowers the sale price</span></li>
+      <li><span class="step">At the end of the sale everyone is only charged the lowest sale price</span></li>
+  </ol>
+</div>
+<p>You control the sale. Up to <em>80%</em> off.</p>
+<a class="btn btn-large btn-action btn-primary" target="_self" href="/auth/register">Sign up for early access</a>
