re-add the modal stuff

--- a/public/partials/prelaunch-dialog-logged-out.html
+++ b/public/partials/prelaunch-dialog-logged-out.html
@@ -7,4 +7,4 @@
   </ol>
 </div>
 <p>You control the sale. Up to <em>80%</em> off.</p>
-<a class="btn btn-large btn-action btn-primary" target="_self" href="/auth/login">Sign up for early access</a>
+<a class="btn btn-large btn-action btn-primary" target="_self" href="/auth/register">Sign up for early access</a>
