--- a/public/stylesheets/item.styl
+++ b/public/stylesheets/item.styl
@@ -32,6 +32,11 @@
   padding 10px
   border 1px solid #ddd
 
+.thumbs img
+  max-height 200px
+
+img.product-image
+.add-basket-box img
 .content img
   max-width 100%
   margin-bottom 20px
