--- a/public/stylesheets/layout.styl
+++ b/public/stylesheets/layout.styl
@@ -107,6 +107,7 @@ section.navs
   transform translate3D(0%, 0, 0)
   z-index $zindex-sidenav-fg
   width 100%
+  background $body-bg
 
 .wrapper
   position relative
