--- a/public/stylesheets/footer.styl
+++ b/public/stylesheets/footer.styl
@@ -1,10 +1,12 @@
 .wrapper > footer
+  _pad = 20px
   ul
     float left
     list-style none
-    margin 0 0 20px
+    margin 0 0 _pad
     li
       float left
-      margin-right 40px
-  .footer-right
+      margin-right _pad * 2
+  .footer-brand
+    margin 0 _pad 0 0
     text-align right
