--- a/views/modal.jade
+++ b/views/modal.jade
@@ -35,12 +35,12 @@ mixin modal-button(href, button)
   +modal-header We are still getting ready!
   +modal-body
   .modal-footer
-    +modal-button("/about", "btn-default") How this works
+    +modal-button("/about", "btn-default")(data-dismiss="modal") How this works
 
 
 +modal#prelaunch-logged-out
   +modal-header We are still getting ready!
   +modal-body
   .modal-footer
-    +modal-button("/about", "btn-default") How this works
+    +modal-button("/about", "btn-default")(data-dismiss="modal") How this works
     +modal-button("/auth/register", "btn-primary")(target="_self") Sign-up for early access
